--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {},
   "peerDependencies": {},
   "devDependencies": {
-    "@types/sass": "^1.16.0",
-    "sass": "^1.32.11",
-    "bulma": "^0.9.3"
+    "@types/sass": "1.16.0",
+    "sass": "1.32.11",
+    "bulma": "0.9.3"
   }
 }
